# diacanvas-sharp

./: .cvsignore  AUTHORS  CREDITS  ChangeLog  INSTALL  NEWS  NOTES  PROBLEMS  README  TODO  WISHLIST  autogen.sh  configure.in  diacanvas-sharp.pc.in  makefile  makefile.am  problems
api/: dia-api.xml  makefile
dia/: .cvsignore  AssemblyInfo.cs.in  Canvas.custom  CanvasBox.custom  CanvasImage.custom  CanvasItem.custom  CanvasLine.custom  CanvasText.custom  CanvasView.custom  DashStyle.cs  Dia.metadata  DiaCanvas.cs  Event.cs  PlacementTool.cs  PlacementTool.custom  Point.custom  diacanvas-api.raw  diacanvas-api.xml  diacanvas-sharp.snk  diacanvas-symbols.xml  makefile  makefile.am
dia/glue/: dia-canvas-item.c  dia-canvas-line.c  dia-canvas-view.c  dia-event.c  makefile.am
doc/: .cvsignore  diacanvas-docs.source  diacanvas-docs.tree  makefile  makefile.am
doc/en/: Dia.xml  DiaSharp.xml  makefile.am
doc/en/Dia/: AddedArgs.xml  AddedHandler.xml  ButtonPressEventArgs.xml  ButtonPressEventHandler.xml  ButtonReleaseEventArgs.xml  ButtonReleaseEventHandler.xml  Canvas.xml  CanvasBezier.xml  CanvasBox.xml  CanvasEditable.xml  CanvasElement.xml  CanvasElementHandle.xml  CanvasEllipse.xml  CanvasGroup.xml  CanvasGroupable.xml  CanvasImage.xml  CanvasItem.xml  CanvasItemFlags.xml  CanvasItemForeachFunc.xml  CanvasItemUIStateFlags.xml  CanvasIter.xml  CanvasLine.xml  CanvasText.xml  CanvasView.xml  CanvasViewItem.xml  CanvasViewItemForeachFunc.xml  CapStyle.xml  ConnectedArgs.xml  ConnectedHandler.xml  Constraint.xml  ConstraintFunc.xml  Copy.xml  DashStyle.xml  DiaCanvas.xml  DisconnectedArgs.xml  DisconnectedHandler.xml  Distance.xml  EditingDoneArgs.xml  EditingDoneHandler.xml  Event.xml  (+76 more)
doc/en/DiaSharp/: AddArgs.xml  AddHandler.xml  AddedArgs.xml  AddedHandler.xml  ButtonPressEventArgs.xml  ButtonPressEventHandler.xml  ButtonReleaseEventArgs.xml  ButtonReleaseEventHandler.xml  CanvasItemForeachFuncNative.xml  CanvasViewItemForeachFuncNative.xml  ConnectedArgs.xml  ConnectedHandler.xml  ConstraintFuncNative.xml  DisconnectedArgs.xml  DisconnectedHandler.xml  EditingDoneArgs.xml  EditingDoneHandler.xml  ExtentsChangedArgs.xml  ExtentsChangedHandler.xml  FocusItemArgs.xml  FocusItemHandler.xml  FocusedItemArgs.xml  FocusedItemHandler.xml  HasStateArgs.xml  HasStateHandler.xml  KeyPressEventArgs.xml  KeyPressEventHandler.xml  KeyReleaseEventArgs.xml  KeyReleaseEventHandler.xml  LoadObjectArgs.xml  LoadObjectHandler.xml  LoadStartArgs.xml  LoadStartHandler.xml  MotionNotifyEventArgs.xml  MotionNotifyEventHandler.xml  MovedArgs.xml  MovedHandler.xml  NeedResolveArgs.xml  NeedResolveHandler.xml  RemoveArgs.xml  (+46 more)
glue/: .cvsignore  dia-canvas-item.c  dia-canvas-line.c  dia-canvas-view.c  dia-canvas.c  dia-event.c  makefile  makefile.am
patches/: dia-canvas-group.c.diff  dia-canvas-groupable.h.diff  dia-canvas-item.c.diff  dia-canvas-item.h.diff  dia-canvas-view-item.c.diff  dia-canvas-view.c.diff  dia-canvas.h.diff  dia-export-svg.c.diff  dia-handle.c.diff  dia-storage.h.diff  dia-textbox.c.diff  gapi2xml.pl.diff  gapi_pp.pl.diff  test-canvas.c.diff
patches/diacanvas/: AddedPropertyPangoLayout.diff  PythonUpdate.diff  removal_of_persistens.diff  unit_tests.cvsignore.diff
patches/diacanvas2-0.9.2/: dia-canvas-item.c.diff  dia-canvas.c.diff  dia-canvas.h.diff  test-canvas-item.c.diff  test-item.c.diff  test-shape-art.c.diff
patches/generator/: AssemblyTagGenerator.diff  MangleNameModifications.diff  StructBase.cs.diff  ToStringOnlyOverridesWhenNoParameters.diff
patches/gtksharp/: APIdecentralized.diff  GnomePrintFixes.diff  UpdateTargetsToGnome2.2.diff  const-gucharVsconst-gchar.diff
patches/parser/: AdditionOfAssemblyTag.diff  ByPassingOfEnumStyle.diff
sample/: .cvsignore  AssemblyInfo.cs.in  CanvasClock.cs  CanvasFigure.cs  CanvasTextBox.cs  diacanvas-sharp-sample.in  makefile  makefile.am  sample.cs
sample/glade/: .cvsignore  gui.glade  gui.glade.bak  gui.gladep.bak  makefile.am
sample/pixmaps/: .cvsignore  box.xcf  line.xcf  makefile.am  selection.xcf  template.xcf  text.xcf
sources/: .cvsignore  Dia.metadata  dia-sharp-sources.xml  dia-sharp.sources  diacanvas-sharp-sources.xml  makefile  makefile.am
