AC_INIT(README)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(diacanvas-sharp, 0.4.0)
AM_MAINTAINER_MODE
AM_PROG_LIBTOOL

dnl Defines CC to avoid warnings
AC_PROG_CC
AC_PROG_INSTALL

AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$PKG_CONFIG" = "xno"; then
	AC_MSG_ERROR(['pkg-config' is not in your PATH.])
fi

AC_PATH_PROG(MONO, mono, no)
if test "x$PKG_CONFIG" = "xno"; then
	AC_MSG_ERROR(['mono' is not in your PATH.])
fi
AC_SUBST(MONO)

PKG_CHECK_MODULES(MONO, mono >= 1.0)
AC_SUBST(MONO_CFLAGS)
AC_SUBST(MONO_LIBS)

PKG_CHECK_MODULES(GTK_SHARP, gtk-sharp >= 1.0)
AC_SUBST(GTK_SHARP_CFLAGS)
AC_SUBST(GTK_SHARP_LIBS)

PKG_CHECK_MODULES(DIACANVAS2, diacanvas2 >= 0.13.0)
AC_SUBST(DIACANVAS2_CFLAGS)
AC_SUBST(DIACANVAS2_LIBS)

AC_PATH_PROG(MCS, mcs, no)
if test "x$MCS" = "xno"; then
	AC_MSG_CHECKING(for mcs.exe)
	MCS=`which mcs.exe 2> /dev/null`
	if test "x$MCS" = "xno" ; then
		AC_MSG_ERROR(['mcs'/'mcs.exe' not found.])
	fi
	AC_MSG_RESULT($MCS)
	MCS="$MONO $MCS"
fi
AC_SUBST(MCS)

AC_PATH_PROG(GAPI_FIXUP, gapi-fixup, no)
if test "x$GAPI_FIXUP" = "xno"; then
	AC_MSG_CHECKING(for gapi-fixup.exe)
	GAPI_FIXUP=`which gapi-fixup.exe 2> /dev/null`
	if test "x$GAPI_FIXUP" = "xno" ; then
		AC_MSG_ERROR(['gapi_fixup'/'gapi-fixup.exe' not found.])
	fi
	AC_MSG_RESULT($GAPI_FIXUP)
	GAPI_FIXUP="$MONO $GAPI_FIXUP"
fi
AC_SUBST(GAPI_FIXUP)

AC_PATH_PROG(GAPI_CODEGEN, gapi-codegen, no)
if test "x$GAPI_CODEGEN" = "xno"; then
	AC_MSG_CHECKING(for gapi_codegen.exe)
	GAPI_CODEGEN=`which gapi_codegen.exe 2> /dev/null`
	if test "x$GAPI_CODEGEN" = "xno" ; then
		AC_MSG_ERROR(['gapi_codegen'/'gapi_codegen.exe' not found.])
	fi
	AC_MSG_RESULT([$GAPI_CODEGEN])
	GAPI_CODEGEN="$MONO $GAPI_CODEGEN"
fi
AC_SUBST(GAPI_CODEGEN)

AC_PATH_PROG(MONODOC, monodoc, no)
if test "x$MONODOC" = "xno"; then
	if test "x$MONODOC" = "xno" ; then
		AC_MSG_ERROR(['monodoc' not found.])
	fi
fi
AC_SUBST(MONODOC)
MONODOC_SOURCESDIR=`$MONODOC --get-sourcesdir`
AC_SUBST(MONODOC_SOURCESDIR)

AC_OUTPUT([
makefile
dia/makefile
doc/makefile
doc/en/makefile
doc/en/Dia/makefile
glue/makefile
sample/makefile
sample/pixmaps/makefile
sample/glade/makefile
])
